--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  >
 <head>
     <meta charset="UTF-8">
-    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">RunGroop</title>
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Demo</title>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
@@ -56,11 +56,5 @@
     </div>
 </nav>
 <body layout:fragment="body" class="d-flex flex-column h-100"></body>
-<!--<footer class="py-5 bg-dark">-->
-<!--    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>-->
-<!--</footer>-->
-<!-- Bootstrap core JS-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>-->
-<!-- Core theme JS-->
 <script src="js/scripts.js"></script>
 </html>
