--- a/src/main/resources/templates/borrowing-list.html
+++ b/src/main/resources/templates/borrowing-list.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Book List</title>
+    <title>Borrowing history</title>
 </head>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
@@ -14,72 +14,191 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="text-decoration-none" th:href="@{/}">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Book list</li>
+                    <li class="breadcrumb-item active" aria-current="page">Borrowing list</li>
                 </ol>
             </nav>
         </div>
         <div class="container px-5 my-5">
             <div class="container">
                 <div class="row">
-                    <form class="col-6" role="form" method="post" th:action="@{/books}">
-                        <input type="hidden" id="book-id" name="bookId" hidden="hidden">
+                    <form class="col-lg-6">
                         <div class="mb-3">
-                            <label for="book-title" class="form-label">Title*</label>
-                            <input type="text" class="form-control form-control-sm" id="book-title" name="title"
-                                   placeholder="Title">
+                            <label for="book-id" class="form-label">
+                                Book title
+                                <a class="small text-decoration-none" th:href="@{/books}">/books</a>
+                            </label>
+                            <select class="form-select form-select-sm" name="bookId" id="book-id" required>
+                                <option value="">Search a book...</option>
+                                <option th:each="book:${bookList}" th:value="${book.bookId}" th:text="${book.title}"/>
+                            </select>
                         </div>
                         <div class="mb-3">
-                            <label for="book-quantity" class="form-label">Quantity*</label>
-                            <input type="number" class="form-control form-control-sm" id="book-quantity" name="quantity"
-                                   placeholder="Quantity...">
+                            <label for="member-id" class="form-label">
+                                Member
+                                <a class="small text-decoration-none" th:href="@{/members}">/members</a>
+                            </label>
+                            <select class="form-select form-select-sm" name="memberId" id="member-id" required>
+                                <option value="">Choose a member...</option>
+                                <option th:each="member:${memberList}" th:value="${member.memberId}"
+                                        th:text="${member.name + ' (' + member.email + ')'}"/>
+                            </select>
                         </div>
                         <div class="mb-3">
-                            <label for="book-author" class="form-label">Author</label>
-                            <input type="text" class="form-control form-control-sm" id="book-author" name="author"
-                                   placeholder="Author (optional)">
+                            <label for="borrow-date" class="form-label">Borrow date</label>
+                            <input type="datetime-local" class="form-control form-control-sm" name="borrowDate"
+                                   id="borrow-date">
                         </div>
-                        <button type="submit" class="btn btn-sm btn-primary col-6">Submit</button>
+                        <button type="submit" id="submit-borrows" class="btn btn-sm btn-primary col-6">Submit</button>
                         <button type="reset" class="btn btn-sm btn-secondary col-3">Clear</button>
                     </form>
                 </div>
             </div>
             <hr>
             <div class="container">
-                <table id="book-table" class="table"></table>
+                <table id="borrowing-table" class="table"></table>
                 <script th:inline="javascript">
                     //<![CDATA[
                     $(function () {
                         "use strict";
-                        const data = /*[[${bookList}]]*/ '[]';
-                        $("#book-table").jqGrid({
-                            data: data,
+                        // document.getElementById('borrow-date').value =
+                        // $('#borrow-date').val(new Date().toJSON().slice(0,19))
+                        const $table = $('#borrowing-table');
+                        const FORM = {
+                            memberId: $('#member-id'),
+                            bookId: $('#book-id'),
+                            borrowDate: $('#borrow-date'),
+                        };
+
+                        const memberList = /*[[${memberList}]]*/ [];
+                        const bookList = /*[[${bookList}]]*/ [];
+                        let memberLookup = {};
+                        let bookLookup = {};
+                        memberList.forEach(member => {
+                            memberLookup[member.memberId] = `${member.name} (${member.email})`
+                        })
+                        bookList.forEach(book => {
+                            bookLookup[book.bookId] = book.title
+                        })
+
+                        $table.jqGrid({
+                            url: /*[[@{/api/v1/borrows}]]*/ "/demo/api/v1/borrows",
+                            datatype: "json",
+                            mtype: "get",
                             colModel: [
-                                {name: "bookId", label: "ID", width: 50, key: true},
-                                {name: "title", label: "Title", width: 200},
-                                {name: "author", label: "Author", width: 150},
-                                {name: "quantity", label: "Quantity", width: 100},
+                                {name: "borrowId", label: "ID", width: 50, key: true, sorttype: 'int'},
                                 {
-                                    label: "Option", width: 50, formatter: (cellValue, options, rowObject) => `<a href="books/${rowObject.bookId}/delete">Delete</a>`
-                                }
+                                    name: "memberId",
+                                    label: "Member Name",
+                                    width: 300,
+                                    formatter: (cellValue) => memberLookup[cellValue] || "Unknown Member"
+                                },
+                                {
+                                    name: "bookId",
+                                    label: "Book Title",
+                                    width: 200,
+                                    formatter: (cellValue) => bookLookup[cellValue] || "Unknown Book"
+                                },
+                                {
+                                    name: "borrowDate",
+                                    label: "Borrow date",
+                                    width: 100,
+                                    sorttype: "date",
+                                    formatter: "date",
+                                    formatoptions: {newformat: "d-M-Y"},
+                                },
+                                {
+                                    name: "returnDate",
+                                    label: "Return date",
+                                    width: 100,
+                                    sorttype: "date",
+                                    formatter: "date",
+                                    formatoptions: {newformat: "d-M-Y"},
+                                },
+                                {name: "status", label: "Status", width: 100},
+                                {
+                                    name: "action",
+                                    label: "Action",
+                                    width: 100,
+                                    formatter: (cellValue, options, rowObject) => rowObject.status === 'returned' ? '' : `<a href="#" class="return-book-btn" data-id="${rowObject.bookId}">Return</a>`
+                                },
                             ],
-                            guiStyle: "bootstrap",
+                            guiStyle: "bootstrap4",
                             iconSet: "fontAwesome",
-                            caption: "Book table",
+                            caption: "Book borrowing history",
                             pager: "#pager",
-                            onSelectRow: function (rowId) {
-                                const rowData = $(this).jqGrid('getRowData', rowId);
-                                $("#book-id").val(rowData.bookId);
-                                $("#book-title").val(rowData.title);
-                                $("#book-author").val(rowData.author);
-                                $("#book-quantity").val(rowData.quantity);
-                            }
+                            jsonReader: {
+                                id: "memberId"
+                            },
                         });
-                    });
+
+                        // -------------
+
+                        function ajaxRequest
+                        ({
+                             url = '/demo/api/v1/borrows',
+                             method = 'get',
+                             data = null,
+                             successCallback = null,
+                             errorCallback = (xhr) => {
+                                 alert(`Failed to ${method} data. Status: ${xhr.status} ${xhr.statusText}`);
+                             },
+                             timeout = 5000
+                         }) {
+                            $.ajax({
+                                url: url,
+                                type: method,
+                                contentType: "application/json",
+                                data: data ? JSON.stringify(data) : null,
+                                success: successCallback,
+                                error: errorCallback,
+                                timeout: timeout
+                            });
+                        }
+
+                        function clearForm() {
+                            FORM.memberId.val("")
+                            FORM.bookId.val("")
+                            FORM.borrowDate.val("")
+                        }
+
+                        function createRequest() {
+                            ajaxRequest({
+                                method: 'post',
+                                data: {
+                                    bookId: FORM.bookId.val(),
+                                    memberId: FORM.memberId.val(),
+                                    borrowDate: FORM.borrowDate.val(),
+                                },
+                                successCallback: () => {
+                                    $table.trigger('reloadGrid');
+                                    clearForm();
+                                    alert("Borrow record added successfully.");
+                                }
+                            });
+                        }
+
+                        $table.on('click', '.return-book-btn', function () {
+                            const borrowId = $(this).data('id');
+                            if (!confirm("Are you sure you want to mark this record for returned?")) return;
+                            ajaxRequest({
+                                url: `/demo/api/v1/borrows/${borrowId}/return`,
+                                method: 'put',
+                                successCallback: () => {
+                                    $table.trigger('reloadGrid');
+                                    alert("Book returned successfully.");
+                                }
+                            });
+                        });
+
+                        $('#submit-borrows').on('click', (e) => {
+                            e.preventDefault();
+                            createRequest();
+                        });
+                    })
+                    ;
                     //]]>
-
-                    $.ajax('')
-
                 </script>
+
             </div>
         </div>
     </section>
